# TradeBruv

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: active_core_investing_universe.txt  active_outlier_universe.txt  active_velocity_universe.txt  alternative_data_watchlist.csv  catalysts_watchlist.csv  famous_outlier_case_studies.txt  mega_cap_universe.txt  momentum_universe.txt  outlier_watchlist.txt  sample_universe.txt  theme_etfs.txt  tracked_tickers.txt  universe_ai_semis_software.txt  universe_etfs_liquid.txt  universe_large_cap_starter.txt  universe_liquid_growth.txt  universe_nasdaq100.txt  universe_russell1000_or_top1000.txt  universe_us_liquid_expanded.txt  universe_us_liquid_stocks.txt
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
tests/: helpers.py  test_ai_analysis_modes.py  test_benchmark_health.py  test_catalysts.py  test_dashboard_data.py  test_dynamic_universe.py  test_filters.py  test_market_discovery.py  test_outliers.py  test_pass10_replay_velocity.py  test_pass11_core_investing.py  test_pass12_decision_cockpit.py  test_pass13_price_validation_cli.py  test_pass14_actionability.py  test_pass15_market_workspace.py  test_pass16_workspace_cleanup.py  test_pass18_market_reliability.py  test_pass19_picker_refinement.py  test_pass4_feedback.py  test_pass5_daily.py  test_pass6_portfolio.py  test_pass6_validation.py  test_pass7_api.py  test_pass8_features.py  test_pass9_live_hardening.py  test_provider_handling.py  test_scoring.py  test_status.py  test_trade_plan.py
tradebruv/: api.py  (+51 more)
(+26 files in other folders)
