[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tradebruv"
version = "0.1.0"
description = "Deterministic stock scanner for research and workflow triage."
requires-python = ">=3.11"

[project.optional-dependencies]
real = ["yfinance>=0.2.56"]

[project.scripts]
tradebruv = "tradebruv.cli:main"

[tool.setuptools.packages.find]
include = ["tradebruv*"]
