[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tradebruv"
version = "0.1.0"
description = "Deterministic stock scanner for research and workflow triage."
requires-python = ">=3.11"

[project.optional-dependencies]
real = ["yfinance>=0.2.56"]
dashboard = ["streamlit>=1.37"]
api = ["fastapi>=0.115", "uvicorn>=0.30", "python-dotenv>=1.0", "httpx>=0.27"]
all = ["streamlit>=1.37", "yfinance>=0.2.56", "fastapi>=0.115", "uvicorn>=0.30", "python-dotenv>=1.0", "httpx>=0.27"]

[project.scripts]
tradebruv = "tradebruv.cli:main"
tradebruv-dashboard = "tradebruv.dashboard:main"
tradebruv-api = "tradebruv.api:main"

[tool.setuptools.packages.find]
include = ["tradebruv*"]
